OpenerLauncher: on Linux, any shell features are supported, on other platforms, quoting is supported
git-svn-id: https://ipscan.svn.sourceforge.net/svnroot/ipscan/trunk@397 375186e5-ef17-0410-b0b6-91563547dcda